feat(api): expose entity merges
